--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,8 +1,8 @@
-$width: 800px;
+$width: 100%;
 $height: auto;
 $padding: 10px;
-$radius: 15px;
-$radius-small: 5px;
+$radius: 20px;
+$radius-small: 10px;
 $font-main: Arial, Helvetica, sans-serif;
 $font-title: 'Ariel Black', Helvetica, sans-serif;
 $font-size: 10pt;
